added and implemented form in add prodcut component

--- a/src/app/layout/bolt-sidenav/bolt-sidenav/bolt-sidenav.component.html
+++ b/src/app/layout/bolt-sidenav/bolt-sidenav/bolt-sidenav.component.html
@@ -1,108 +1,170 @@
-<mat-sidenav-container hasBackdrop="false" [attr.fullscreen]="_demoOnly ? null : ''"
-  [ngStyle]="{'height' : _demoOnly ? '600px' : '100%'}">
-  <mat-sidenav mode=" over" [opened]="true" [ngStyle]="{ 'width.em': sidenavWidth }" disableClose>
+<mat-sidenav-container
+  hasBackdrop="false"
+  [attr.fullscreen]="_demoOnly ? null : ''"
+  [ngStyle]="{ height: _demoOnly ? '600px' : '100%' }"
+>
+  <mat-sidenav
+    mode=" over"
+    [opened]="true"
+    [ngStyle]="{ 'width.em': sidenavWidth }"
+    disableClose
+  >
     <div class="mat-sidenav-inner">
-      <aside class="sidenav-top-row mat-elevation-z8" (click)="sidenavClicked(null)">
-        <div [ngClass]="{'logo' : sidenavWidth == sidenavMaxWidth, 'logo-small' : sidenavWidth == sidenavMinWidth}"
-          class="clickable-icon">
+      <aside
+        class="sidenav-top-row mat-elevation-z8"
+        (click)="sidenavClicked(null)"
+      >
+        <div
+          [ngClass]="{
+            logo: sidenavWidth == sidenavMaxWidth,
+            'logo-small': sidenavWidth == sidenavMinWidth
+          }"
+          class="clickable-icon"
+        >
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 165.092 90">
             <title>bolt-light</title>
             <g id="a08df573-7f49-44f4-a17a-270e34dc7f91" data-name="Layer 2">
               <g id="626b4e34-fdad-4431-b41e-8413dec0f715" data-name="Layer 1">
-                <g style="opacity:0.7000000000000001">
+                <g style="opacity: 0.7000000000000001">
                   <path
                     d="M72.337,90a15.654,15.654,0,0,1-13.009-6.209q-4.851-6.208-4.849-16.616A56.1,56.1,0,0,1,58.5,45.3q4.019-9.579,10.821-14.723a24.571,24.571,0,0,1,15.2-5.145,15.656,15.656,0,0,1,13.009,6.209q4.848,6.208,4.849,16.616a56.113,56.113,0,0,1-4.022,21.88q-4.021,9.579-10.821,14.723A24.578,24.578,0,0,1,72.337,90Zm1.892-10.526q4.258,0,7.983-4.552A33.36,33.36,0,0,0,88.066,63.39,49.537,49.537,0,0,0,90.2,48.844q0-6.149-1.951-9.521a6.161,6.161,0,0,0-5.618-3.37q-4.257,0-7.983,4.553a33.4,33.4,0,0,0-5.854,11.531A49.589,49.589,0,0,0,66.66,66.583q0,6.151,1.952,9.521A6.157,6.157,0,0,0,74.229,79.474Z"
-                    style="fill:#fff" />
-                  <path d="M101.388,88.7,120.311,0h12.063L113.451,88.7Z" style="fill:#fff" />
+                    style="fill: #fff"
+                  />
+                  <path
+                    d="M101.388,88.7,120.311,0h12.063L113.451,88.7Z"
+                    style="fill: #fff"
+                  />
                   <path
                     d="M156.577,86.334A25.738,25.738,0,0,1,142.739,90Q136,90,132.391,86.394t-3.607-10.349a41.058,41.058,0,0,1,1.183-8.87l6.622-30.867h-8.042l2.011-9.58h8.515L144.75,9.816h9.461l-3.666,16.912h14.547l-2.01,9.58H148.534l-6.622,31.34a28.764,28.764,0,0,0-.828,6.15q0,5.56,5.677,5.559a15.711,15.711,0,0,0,7.923-2.248Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M48.312,30.867a13.137,13.137,0,0,0-11.571-5.42,15.526,15.526,0,0,0-5.376,1.244L27.036,37.442a12.189,12.189,0,0,1,1.692-.825c3.283-1.253,7.012-.756,9.078,2.288,1.97,2.9,2.2,6.753,2.165,10.146a53.41,53.41,0,0,1-.569,7.311q-.264,1.771-.655,3.521-.194.867-.419,1.727c-.075.285-.153.571-.233.855-.029.1-.123.428-.168.589.027-.089.058-.175.084-.264-.126.419-.124.407-.084.264-.165.541-.332,1.082-.517,1.617q.258-.759.488-1.526A35.221,35.221,0,0,1,33.18,73.238c-2.012,2.837-4.764,5.541-8.335,6.111-5.212.831-9.18-2.754-11.894-6.929L6.4,88.7H8.5c.183,0,.592.068.734-.03.319-.218.6-1.318.754-1.649l1.716-3.761A15.44,15.44,0,0,0,24.982,89.99c5.832-.185,10.967-3.192,14.9-7.363C48.19,73.811,51.637,60.929,52.1,49.1,52.338,42.936,52,36.09,48.312,30.867Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                 </g>
                 <path
                   d="M24.826,0H12.763L0,59.826.043,59.8c.351-.356.693-.718,1.047-1.073q3.267-3.266,6.651-6.312h0L0,88.7,22.91,31.808Q17.35,35.516,11.821,39.9Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
               </g>
             </g>
           </svg>
         </div>
-        <mat-icon class="minimize-icon clickable-icon" *ngIf="sidenavWidth == sidenavMaxWidth && sideNavDocked">
-          format_indent_decrease</mat-icon>
-        <mat-icon class="minimize-icon clickable-icon" *ngIf="sidenavWidth == sidenavMaxWidth && !sideNavDocked">
-          format_indent_increase</mat-icon>
+        <mat-icon
+          class="minimize-icon clickable-icon"
+          *ngIf="sidenavWidth == sidenavMaxWidth && sideNavDocked"
+        >
+          format_indent_decrease</mat-icon
+        >
+        <mat-icon
+          class="minimize-icon clickable-icon"
+          *ngIf="sidenavWidth == sidenavMaxWidth && !sideNavDocked"
+        >
+          format_indent_increase</mat-icon
+        >
       </aside>
-      <nav class="nav"
-        [ngClass]="{ 'demo-only' : (!sideNavDocked && _demoOnly), 'nav-small' : (sideNavDocked && _demoOnly)}">
-        <bolt-menu-item [navigationOptions]="navigationOptions" [isexpand]="sidenavWidth == sidenavMaxWidth"
-          [level]="1">
+      <nav
+        class="nav"
+        [ngClass]="{
+          'demo-only': !sideNavDocked && _demoOnly,
+          'nav-small': sideNavDocked && _demoOnly
+        }"
+      >
+        <bolt-menu-item
+          [navigationOptions]="navigationOptions"
+          [isexpand]="sidenavWidth == sidenavMaxWidth"
+          [level]="1"
+        >
         </bolt-menu-item>
       </nav>
-      <aside class="sidenav-bottom-row mat-elevation-z8" *ngIf="sidenavWidth === sidenavMaxWidth">
+      <aside
+        class="sidenav-bottom-row mat-elevation-z8"
+        *ngIf="sidenavWidth === sidenavMaxWidth"
+      >
         <div class="powered-by-image">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 136.678 13.204">
             <title>powered_by-light</title>
             <g id="29fb2685-ac1e-41ba-8ced-1db66f0c2998" data-name="Layer 2">
               <g id="956981f1-2917-42c7-87b2-3313e6df210b" data-name="Layer 1">
-                <g style="opacity:0.7000000000000001">
+                <g style="opacity: 0.7000000000000001">
                   <path
                     d="M0,3.018H2.442a2.906,2.906,0,0,1,2,.638,2.239,2.239,0,0,1,.715,1.76,2.3,2.3,0,0,1-.726,1.793,2.85,2.85,0,0,1-1.991.66H.869v2.849H0ZM.869,7.066H2.4a2.012,2.012,0,0,0,1.38-.434,1.543,1.543,0,0,0,.49-1.216,1.474,1.474,0,0,0-.484-1.177A2.059,2.059,0,0,0,2.4,3.821H.869Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M11.352,7.858a3.227,3.227,0,0,1-.369,1.562,2.613,2.613,0,0,1-.989,1.045,2.732,2.732,0,0,1-1.4.363,2.629,2.629,0,0,1-2.42-1.463A3.283,3.283,0,0,1,5.83,7.858,3.23,3.23,0,0,1,6.2,6.3a2.62,2.62,0,0,1,.989-1.045,2.732,2.732,0,0,1,1.4-.363,2.629,2.629,0,0,1,2.42,1.463A3.286,3.286,0,0,1,11.352,7.858Zm-.836,0a2.376,2.376,0,0,0-.539-1.612,1.751,1.751,0,0,0-1.386-.621,1.751,1.751,0,0,0-1.386.621,2.376,2.376,0,0,0-.539,1.612,2.371,2.371,0,0,0,.539,1.611,1.748,1.748,0,0,0,1.386.622,1.748,1.748,0,0,0,1.386-.622A2.371,2.371,0,0,0,10.516,7.858Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M16.005,6.307l-1.331,4.411h-.8L12.012,5.009h.9L14.278,9.7l1.353-4.477h.8L17.765,9.7l1.364-4.686h.9l-1.859,5.709h-.8Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M21.538,8.166a2.159,2.159,0,0,0,.632,1.408,1.954,1.954,0,0,0,1.4.517,3.653,3.653,0,0,0,.9-.1A3.361,3.361,0,0,0,25.3,9.64l.275.638a3.747,3.747,0,0,1-.963.418,4.249,4.249,0,0,1-1.1.132,2.835,2.835,0,0,1-1.5-.385,2.57,2.57,0,0,1-.979-1.051,3.294,3.294,0,0,1-.341-1.523,3.318,3.318,0,0,1,.357-1.562A2.648,2.648,0,0,1,22,5.257a2.431,2.431,0,0,1,1.309-.369,2.333,2.333,0,0,1,1.281.347,2.308,2.308,0,0,1,.842.951,3.056,3.056,0,0,1,.3,1.364q0,.309-.022.616ZM23.32,5.625a1.582,1.582,0,0,0-1.183.5,2.281,2.281,0,0,0-.588,1.331h3.344V7.4a2.05,2.05,0,0,0-.2-.919,1.457,1.457,0,0,0-1.369-.852Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M30.172,5.735a3.028,3.028,0,0,0-.516-.044,2.675,2.675,0,0,0-1.717.693v4.334h-.824V5.009h.7l.089.693a2.741,2.741,0,0,1,1.914-.814,2.075,2.075,0,0,1,.462.055Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M31.712,8.166a2.155,2.155,0,0,0,.633,1.408,1.951,1.951,0,0,0,1.4.517,3.631,3.631,0,0,0,.9-.1,3.356,3.356,0,0,0,.827-.352l.273.638a3.706,3.706,0,0,1-.961.418,4.26,4.26,0,0,1-1.1.132,2.828,2.828,0,0,1-1.5-.385,2.588,2.588,0,0,1-.981-1.051,3.294,3.294,0,0,1-.34-1.523,3.307,3.307,0,0,1,.358-1.562,2.632,2.632,0,0,1,.951-1.05,2.43,2.43,0,0,1,1.308-.369,2.336,2.336,0,0,1,1.282.347,2.3,2.3,0,0,1,.841.951,3.056,3.056,0,0,1,.3,1.364q0,.309-.021.616Zm1.783-2.541a1.579,1.579,0,0,0-1.183.5,2.287,2.287,0,0,0-.588,1.331h3.343V7.4a2.063,2.063,0,0,0-.2-.919,1.455,1.455,0,0,0-1.369-.852Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M42.053,2.468v8.25h-.7l-.078-.594a3.1,3.1,0,0,1-.9.545,2.924,2.924,0,0,1-1.007.159,2.116,2.116,0,0,1-1.264-.385,2.485,2.485,0,0,1-.832-1.051,3.765,3.765,0,0,1-.291-1.523A3.571,3.571,0,0,1,37.312,6.3a2.462,2.462,0,0,1,.907-1.045,2.4,2.4,0,0,1,1.3-.363,2.828,2.828,0,0,1,1.706.572V2.468Zm-2.5,7.623a2.276,2.276,0,0,0,.852-.16,3.025,3.025,0,0,0,.82-.511V6.252a2.652,2.652,0,0,0-.749-.462,2.148,2.148,0,0,0-.814-.165,1.649,1.649,0,0,0-1.347.611,2.493,2.493,0,0,0-.5,1.633A2.543,2.543,0,0,0,38.3,9.481,1.524,1.524,0,0,0,39.556,10.091Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M46.276,10.718V2.468H47.1V5.592a3.132,3.132,0,0,1,.885-.544,2.74,2.74,0,0,1,.974-.16,2.121,2.121,0,0,1,1.265.385,2.489,2.489,0,0,1,.831,1.062,3.86,3.86,0,0,1,.291,1.534,3.511,3.511,0,0,1-.33,1.562,2.492,2.492,0,0,1-.9,1.034,2.387,2.387,0,0,1-1.308.363,2.894,2.894,0,0,1-1.76-.594l-.067.484Zm2.5-5.093a2.174,2.174,0,0,0-.846.165,3.224,3.224,0,0,0-.825.528V9.486a2.327,2.327,0,0,0,.731.451,2.3,2.3,0,0,0,.831.154,1.66,1.66,0,0,0,1.342-.61,2.45,2.45,0,0,0,.506-1.612,2.584,2.584,0,0,0-.479-1.623A1.514,1.514,0,0,0,48.773,5.625Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                   <path
                     d="M52.854,13.2a2.08,2.08,0,0,1-1-.242l.186-.649a2.215,2.215,0,0,0,.727.154.911.911,0,0,0,.495-.132,1.41,1.41,0,0,0,.412-.473,9,9,0,0,0,.512-1.1l.043-.11L51.963,5.009h.946l1.749,4.752,1.716-4.752h.913L54.967,10.8a12.315,12.315,0,0,1-.672,1.441,2.2,2.2,0,0,1-.627.743A1.411,1.411,0,0,1,52.854,13.2Z"
-                    style="fill:#fff" />
+                    style="fill: #fff"
+                  />
                 </g>
                 <path
                   d="M90.929,9.189q0-1.364,1.76-2.3A5,5,0,0,1,91.9,5.873a1.893,1.893,0,0,1-.209-.885,1.569,1.569,0,0,1,.572-1.255,2.209,2.209,0,0,1,1.474-.484,2.105,2.105,0,0,1,1.4.451,1.482,1.482,0,0,1,.533,1.188q0,1.122-1.782,2.1l1.694,1.749q.352-.573.506-.87l.484-.935h.814l-.6,1.133q-.287.528-.682,1.144l1.826,1.848H96.836l-1.2-1.221a3.037,3.037,0,0,1-2.453,1.331,2.4,2.4,0,0,1-1.639-.539A1.817,1.817,0,0,1,90.929,9.189Zm2.343,1.276a1.883,1.883,0,0,0,1-.269,2.966,2.966,0,0,0,.852-.842l-1.969-2a3.74,3.74,0,0,0-1.045.858,1.487,1.487,0,0,0-.33.925,1.233,1.233,0,0,0,.407.967A1.576,1.576,0,0,0,93.272,10.465Zm-.781-5.5a1.3,1.3,0,0,0,.071.446,1.722,1.722,0,0,0,.259.434q.188.243.594.671a4.424,4.424,0,0,0,1.1-.814,1.175,1.175,0,0,0,.347-.792.9.9,0,0,0-.313-.7,1.2,1.2,0,0,0-.82-.275,1.357,1.357,0,0,0-.9.287A.927.927,0,0,0,92.491,4.965Z"
-                  style="fill:#fff;opacity:0.7000000000000001" />
+                  style="fill: #fff; opacity: 0.7000000000000001"
+                />
                 <path
                   d="M101.138,3.359h3.64a3.146,3.146,0,0,1,2.157.682,2.425,2.425,0,0,1,.77,1.914,2.494,2.494,0,0,1-.781,1.942,3.073,3.073,0,0,1-2.146.709h-1.154V9.7h.869v1.363h-3.355V9.7h.758V4.723h-.758Zm2.486,3.784h1.045a1.341,1.341,0,0,0,.951-.313,1.138,1.138,0,0,0,.336-.875,1.063,1.063,0,0,0-.33-.841,1.4,1.4,0,0,0-.957-.291h-1.045Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
                 <path
                   d="M115.5,11.059h-2.915V9.728h.395l-.714-1.287h-1.144V9.728h.594v1.331h-3.08V9.7h.758V4.723h-.758V3.359h3.685a3.13,3.13,0,0,1,2.122.66,2.3,2.3,0,0,1,.76,1.837A2.578,2.578,0,0,1,114.86,7.2a2.323,2.323,0,0,1-.984.9l.978,1.6h.65Zm-4.378-4.081h1.2a1.136,1.136,0,0,0,.824-.3,1.037,1.037,0,0,0,.309-.781,1.041,1.041,0,0,0-.3-.792,1.162,1.162,0,0,0-.83-.285h-1.2Z"
-                  style="fill:#fff" />
-                <path d="M116.427,9.7h.759V4.723h-.759V3.359h3.245V4.723h-.759V9.7h.759v1.363h-3.245Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
+                <path
+                  d="M116.427,9.7h.759V4.723h-.759V3.359h3.245V4.723h-.759V9.7h.759v1.363h-3.245Z"
+                  style="fill: #fff"
+                />
                 <path
                   d="M123.269,11.191a5.661,5.661,0,0,1-2.619-.561V8.552H122v.957a4.3,4.3,0,0,0,1.166.164q1.407,0,1.408-.8a.578.578,0,0,0-.281-.5,4.35,4.35,0,0,0-1.094-.418l-.474-.133a3.2,3.2,0,0,1-1.523-.824,1.992,1.992,0,0,1-.478-1.387,2.232,2.232,0,0,1,.363-1.276,2.27,2.27,0,0,1,1.017-.819,3.848,3.848,0,0,1,1.524-.281,6.59,6.59,0,0,1,1.292.127,4.916,4.916,0,0,1,1.106.346V5.724h-1.353V4.877a2.992,2.992,0,0,0-.924-.132,1.841,1.841,0,0,0-.936.193.621.621,0,0,0-.318.566.6.6,0,0,0,.258.5,2.878,2.878,0,0,0,.886.368l.473.132a3.983,3.983,0,0,1,1.733.842,1.867,1.867,0,0,1,.5,1.38,2.186,2.186,0,0,1-.83,1.8A3.5,3.5,0,0,1,123.269,11.191Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
                 <path
                   d="M127.328,3.359h2.431l2.256,4.455,2.232-4.455h2.431V4.723h-.759V9.7h.759v1.363h-3.2V9.7h.758V6.439L132.63,9.706h-1.276l-1.606-3.19V9.7h.759v1.363h-3.179V9.7h.759V4.723h-.759Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
                 <path
                   d="M80.181,3.316H77.418v-1.1H76.312V3.316h-.553a2.211,2.211,0,0,0,0,4.422H77.97a1.106,1.106,0,1,1,0,2.211H73.306a2.67,2.67,0,0,1-.946,1.105h3.952V12.16h1.106V11.054h.552a2.211,2.211,0,0,0,0-4.422H75.759a1.106,1.106,0,0,1,0-2.211h4.664a2.669,2.669,0,0,1,.947-1.106Z"
-                  style="fill:#0b9dd9" />
+                  style="fill: #0b9dd9"
+                />
                 <path
                   d="M72,3.316v1.9h0V8.843A1.107,1.107,0,0,1,70.9,9.949H68.685a1.107,1.107,0,0,1-1.106-1.106V4.422h0V3.316h-1.1V8.843a2.218,2.218,0,0,0,2.211,2.211H70.9a2.217,2.217,0,0,0,2.21-2.211V3.316Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
                 <path
                   d="M63.821,1.105h2.211V0H63.821A2.218,2.218,0,0,0,61.61,2.211V3.316h-1.1V4.422h1.1v6.632h1.105V4.422h3.317V3.316H62.715v-1.1A1.107,1.107,0,0,1,63.821,1.105Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
                 <path
                   d="M87.256,4.422V3.316H82.834a2.218,2.218,0,0,0-2.211,2.211V8.843a2.218,2.218,0,0,0,2.211,2.211h4.422V9.949H82.834a1.107,1.107,0,0,1-1.105-1.106v-1.1h3.316V6.633H81.729V5.527a1.107,1.107,0,0,1,1.105-1.105h4.422Z"
-                  style="fill:#fff" />
+                  style="fill: #fff"
+                />
               </g>
             </g>
           </svg>
@@ -111,14 +173,28 @@
     </div>
   </mat-sidenav>
 
-  <mat-sidenav-content [ngClass]="{'slide-right': sideNavDocked}">
-    <div #content class="sidenav-content-div" [ngStyle]="{'padding-left': _demoOnly ? '10px' : '0'}">
-      <ng-content></ng-content>
-      <div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
-        <!-- <bolt-button type="link" (click)="scrollToTop()">
-          Back to Top
-      </bolt-button> -->
+  <mat-sidenav-content [ngClass]="{ 'slide-right': sideNavDocked }">
+    <div class="header mat-elevation-z5">
+      <app-header></app-header>
+    </div>
+    <div
+      #content
+      class="sidenav-content-div"
+      [ngStyle]="{ 'padding-left': _demoOnly ? '10px' : '0' }"
+    >
+      
+      <div style="height: 100%;">
+        <ng-content></ng-content>
       </div>
+      
+      <!-- <div
+        class="scroll-to-top"
+        [ngClass]="{ 'show-scrollTop': windowScrolled }"
+      >
+        <bolt-button type="link" (click)="scrollToTop()">
+          Back to Top
+      </bolt-button>
+      </div> -->
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
