--- a/src/app/layout/bolt-sidenav/bolt-sidenav/bolt-sidenav.component.scss
+++ b/src/app/layout/bolt-sidenav/bolt-sidenav/bolt-sidenav.component.scss
@@ -155,5 +155,10 @@ mat-sidenav-content {
 }
 
 .sidenav-content-div {
-  overflow-y: auto !important; 
+  overflow-y: hidden !important; 
+  height: 100%;
+}
+.header {
+  height: 64px;
+  background: whitesmoke;
 }
