--- a/src/app/layout/layout/layout-content/layout-content.component.html
+++ b/src/app/layout/layout/layout-content/layout-content.component.html
@@ -1,4 +1,4 @@
-<div class="header mat-elevation-z5">
-    <app-header></app-header>
+<div class="content">
+    <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
+
