--- a/src/app/routes/add-product/add-product.component.html
+++ b/src/app/routes/add-product/add-product.component.html
@@ -1,1 +1,106 @@
-<p>add-product works!</p>
+<div class="container">
+  <mat-card class="mat-elevation-z5"> 
+    <div class="parent-div"> 
+      <div>
+        <mat-form-field appearance="legacy">
+          <mat-label>Product Name</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div> <mat-form-field appearance="legacy">
+        <mat-label>Product Code</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field></div>
+    </div>
+    <div class="parent-div"> 
+      <div>
+        <mat-form-field appearance="legacy">
+          <mat-label>Brand</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div> <mat-form-field appearance="legacy">
+        <mat-label>SKU (s)</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field></div>
+    </div>
+    <div class="parent-div"> 
+      <div>
+        <mat-form-field appearance="legacy">
+          <mat-label>Selling Price</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div> <mat-form-field appearance="legacy">
+        <mat-label>Cost Price</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field></div>
+    </div>
+    <div class="parent-div"> 
+      <div>
+        <mat-form-field appearance="legacy">
+          <mat-label>Profit (%)</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div> <mat-form-field appearance="legacy">
+        <mat-label>Loss (%)</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field></div>
+    </div>
+    <div class="parent-div"> 
+      <div>
+        <mat-form-field appearance="legacy">
+          <mat-label>GST (%)</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div> <mat-form-field appearance="legacy">
+        <mat-label>Total</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field></div>
+    </div>
+    <div class="parent-div"> 
+      <div>
+        <mat-form-field appearance="legacy">
+          <mat-label>Quantity</mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+          <mat-hint>Hint</mat-hint>
+        </mat-form-field>
+      </div>
+      <div> <mat-form-field appearance="legacy">
+        <mat-label>Expiry Date</mat-label>
+        <input matInput placeholder="Placeholder">
+        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-hint>Hint</mat-hint>
+      </mat-form-field></div>
+    </div>
+    <div class="btn-row">
+      <button mat-raised-button color="basic">Clear</button>
+      <button mat-raised-button class="primary">Save</button>
+    </div>
+   
+    
+  </mat-card>
+</div>
